--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "mantis-free-react-admin-template",
+  "name": "mustfintech",
   "version": "1.3.0",
   "private": true,
-  "homepage": "https://mantisdashboard.io/free",
+  "homepage": "/",
   "author": {
-    "name": "CodedThemes",
-    "email": "codedthemes@gmail.com",
-    "url": "https://codedthemes.com/"
+    "name": "",
+    "email": "",
+    "url": ""
   },
   "scripts": {
     "start": "vite",
